=item *

Added a timetamp for data that F<bric_queued> sends to its log. Thanks to Neal
Sofge for the suggestion (Bug #41). [David]

=item *

Renamed the "Lock Val" checkbox in the media profile to "Autopopulate". It is
now checked by default, rather than unchecked. Uncheck it to prevent Bricolage
from auotopopulating values in the future. Thanks to Marshall for the
suggestion (Bug #32). [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the loading of WYSIWYG editor callback code in the Apache
configuration. [John Durkin]

=item *

Uploading a media file to a related media element to create a new media
document not works properly when the related media element is a subelement.
Reported by John Durkin (Bug #1364). [David]

=item *

Fixed a bug where an attempt to export a story via SOAP failed due to a bad
method call. Reported by Denny de la Haye. [David]

=item *

Added confirmation on Delete JavaScript action on Workspace and desk.
Reported by Matt Rolf (Bug 1380). [Sarah Mercier]

=item *

Fixed problem with rendering of radio button fields (Bug #1387).
[Denny de la Haye]

=item *

Fixed L<Bric> to load L<Bric::Config> before anything else, which was causing
problems on some systems. [Paul Orrock]

=item *

Fixed problem with L<Bric::SOAP> so that the first field or container is
correctly numbered at 0 rather than 2. [Paul Orrock]

=item *

Fix for bug 1394 && 1397, where a story imported through L<Bric::SOAP> didn't
have its object_order set properly so wouldn't preview through templates until
saved in the UI. [Paul Orrock]

=item *

Fixed up broken / non-compliant HTML on desks, search results and workspace.
[Paul Orrock]

=item *

Made css improvements concerning the popup menus on the desk widget.
[Sarah Mercier and Matt Rolf]

=item *

Fix for bug #1400, primary category now shows as a required field. [Matt Rolf]

=item *

Fix for bug #1414, relabled the Associations box in edit_meta.html. [Matt Rolf]

=item *
