@@ -4,15 +4,8 @@
    context => "Welcome to " . get_pref('Bricolage Instance Name') . ".",
 &>
 <& /widgets/wrappers/table_top.mc &>
-<%perl>;
-my $string   = $lang->maketext('Please click [_1]here[_2] to start.',
-               qq{<a href="$url" style="font-weight: bold;" onclick="var newWin = window.open('$url', 'Bricolage_} . SERVER_WINDOW_NAME .
-               qq{', 'menubar=0,location=0,toolbar=0,personalbar=0,status=1,scrollbars=1,resizable=1,width=980'); newWin.focus(true);">},
-               '</a>'
-               );
-</%perl>
 <div style="padding: 1em;">
-<% $string %>
+  <a href="<% $url %>" style="font-weight: bold;" onclick="var newWin = window.open('<% $url %>', 'Bricolage_<% SERVER_WINDOW_NAME %>', 'menubar=0,location=0,toolbar=0,personalbar=0,status=1,scrollbars=1,resizable=1,width=980'); newWin.focus(true);"><% $lang->maketext('Start Bricolage') %></a>
 </div>
 <& /widgets/wrappers/table_bottom.mc &>
 <& /widgets/wrappers/footer.mc &>
